--- a/Basics/ch02.md
+++ b/Basics/ch02.md
@@ -12,7 +12,7 @@ print "Hello Python!"
 ### Python 3
 Python3 was released in 2008 with the goal to simplify Python, making it more easier to use. The goal of this new Python version was to also change the way a language handles strings, consequently enabling it to meet demands of the language today.
 
-Python3 is the first release which is incompatible with previous Python release which is incompatible with previous python versions, which is why some people still use Python2, as they find some packages and libraries not working with latest Python versions. 
+Python3 is the first release which is incompatible with previous python versions, which is why some people still use Python2, as they find some packages and libraries not working with latest Python versions. 
 
 In Python3, you must pass items to print explicitly to the function in parentheses as folows:
 ```python
