--- a/Basics/3.ch03.md
+++ b/Basics/3.ch03.md
@@ -32,3 +32,4 @@ We can write our first Python program, and print Hello, World to the console! It
 >>> print("Hello, World!")
 # Hello, World!
 ```
+[prev](./ch02.md) | [next](./ch03.md)
