--- a/Basics/ch04.md
+++ b/Basics/ch04.md
@@ -21,7 +21,7 @@ Similar to other programming languages, Python allows user the use of standard a
 ### 2. Complex Arithmetic Operators.
 Python also supports the `**` operator, which multiples a number to the power of another. The code below executes as 3 to the power of 3. The modulo operator `%` is also supported in python, which is used to return integer remainder of a division sum.
 
-```
+```python
 >>> 3 ** 3
 27
 >>> 16 % 3
@@ -31,7 +31,7 @@ Python also supports the `**` operator, which multiples a number to the power of
 ### 3. Execution Order of Arithmetic Operators.
 When creating commands using python operators, it's very important you understand the order in which your command will be executed. What number does the below commands will return ? The order of execution is multplication, division, addition, and substraction respectively. Therefore making the output of the code `14.0`.
 
-```
+```python
 >>> 2 + 9 * 4 / 3
 14.0
 >>> 
