merger with ch2

--- a/Basics/ch01.md
+++ b/Basics/ch01.md
@@ -23,3 +23,28 @@ for i in numbers:
 
 Python is also considered as economical programming, savings lines of code as compared to other langauges. For similar problem or task, Python can often require 3-5 times less code than Java, and up to 10 times less code than C++. Also being an __Object Oriented__ programming language, it really act as beginner's stepping stone to learn other object-oriented programming languages, & can help us adapt to other programming environment.
 
+
+| ch02  | 
+| -------|
+| Versions| 
+
+### Python 2
+The final version of Python 2 came out in 2010, and despite Python3 being latest hotshot of the language, many programmers still uses Python v2.7. One of the advantage of Python 2 is that it has been around far longer than v3, therefore therefore there's more technical support and help available. Minor difference between v2 & v3 is that in v2, `print` is treated as statement instead of a function, therefore it eliminates use of passing arguments through paraentheses, for example:
+
+```python
+print "Hello Python!"
+```
+
+### Python 3
+Python3 was released in 2008 with the goal to simplify Python, making it more easier to use. The goal of this new Python version was to also change the way a language handles strings, consequently enabling it to meet demands of the language today.
+
+Python3 is the first release which is incompatible with previous python versions, which is why some people still use Python2, as they find some packages and libraries not working with latest Python versions. 
+
+In Python3, you must pass items to print explicitly to the function in parentheses as folows:
+```python
+print("This is new Quirks of Python3")
+```
+Python3 is contemplated as an improved version of Python2, with fewer mistakes, and easier for beginners to understand and use. Let's dive into latest version. As a beginner, the best bet is **Pyhton3**. This is a standard which is advancing faster and you don't have to worry at all about porting a whole Python2 application to Python3(the main reason why python 2 hung around for so long).
+
+
+
