--- a/Basics/ch01.md
+++ b/Basics/ch01.md
@@ -47,4 +47,39 @@ print("This is new Quirks of Python3")
 Python3 is contemplated as an improved version of Python2, with fewer mistakes, and easier for beginners to understand and use. Let's dive into latest version. As a beginner, the best bet is **Pyhton3**. This is a standard which is advancing faster and you don't have to worry at all about porting a whole Python2 application to Python3(the main reason why python 2 hung around for so long).
 
 
+ch03 |
+--- |
+Environment|
+
+### Python Environment
+
+Python comes Pre-installed on most Linux distributions and is available as packages or installers on all other operating systems. Everything you need can be found on:
+
+[Python Downloads](https://www.python.org/downloads "Python downloads page") 
+
+After installing Python, fire up a new terminal(Unix/MacOS) or PowerShell(Windows) in order to run the Python REPL shell:
+```python
+#$ python3
+#Python 3.6.2 (v3.6.2:5fd33b5926, Jul 16 2017, 20:11:06) 
+#[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
+# Type "help", "copyright", "credits" or "license" for more information.
+>>> quit()
+#$
+```
+
+**REPL** stands for the _Read-Eval-Print Loop_ which evaluates each line of code you write and outputs the result. Even though it may sound like something new, it is not. We just invoked the Python REPL from another REPL application- the shell inside the terminal. 
+
+
+It is advisable not to use the REPL interpreter for longer snippets of code, however. It is generally easy to write a Python code in a text editor or an IDE of your choice. There are lot of options here: [Emacs](https://www.gnu.org/software/emacs/), [Vim](http://www.vim.org/), [Sublime](https://www.sublimetext.com/), and IDEs like [PyCharm](https://www.jetbrains.com/pycharm/), [Spyder](https://pythonhosted.org/spyder/index.html), [Jupyter Notebook](http://jupyter.org/)  etc. each with there unique advantages and disadvantages.The choice for the beginners is using a simple text editor [Atom](https://atom.io/), which is simple to use and highly customizable.
+
+To run python file, it should firstly have the `.py` extension. Then, invike a new terminal inside the directory and write:
+`$ python3 pythonoob.py`
+
+### The classic Hello, World.
+We can write our first Python program, and print Hello, World to the console! It cannot get any simpler. So to do this, in our Python Interpreter(REPL), we can use Python's `print` method. as follows:
+```
+>>> print("Hello, World!")
+# Hello, World!
+```
+
 
