--- a/Basics/ch01.md
+++ b/Basics/ch01.md
@@ -82,4 +82,71 @@ We can write our first Python program, and print Hello, World to the console! It
 # Hello, World!
 ```
 
+|ch04|
+|----|
+|Operators & Indentation|
 
+### 1. Basic Arithmetic Operators.
+Similar to other programming languages, Python allows user the use of standard arithmetic operators with numbers. The four standard arithmetic operators for addition, substraction, multiplication and division, `+`,` -`, `*`,` /` respectively. In python3, division using `/` will return a _float_. If you are looking for the floor division, the `//` operator should be used.
+
+```python
+>>> 490 + 34
+524
+>>> 878 - 67
+811
+>>> 56 * 4
+224
+>>> 45 / 8
+5.625
+>>> 45 // 8
+>>> 5 
+```
+
+### 2. Complex Arithmetic Operators.
+Python also supports the `**` operator, which multiples a number to the power of another. The code below executes as 3 to the power of 3. The modulo operator `%` is also supported in python, which is used to return integer remainder of a division sum.
+
+```python
+>>> 3 ** 3
+27
+>>> 16 % 3
+1
+```
+
+### 3. Execution Order of Arithmetic Operators.
+When creating commands using python operators, it's very important you understand the order in which your command will be executed. What number does the below commands will return ? The order of execution is multplication, division, addition, and substraction respectively. Therefore making the output of the code `14.0`.
+
+```python
+>>> 2 + 9 * 4 / 3
+14.0
+>>> 
+
+```
+
+### 4. Indentation and Commenting.
+Unlike many other programming languages, Python uses  indentation(tabs) to seperate blocks of code instead of curly braces. Tabs and spaces are both supported with the standard Python code indentation being four spaces. 
+
+```python
+indent = 4
+if indent == 4:
+	print("Will be printing this.")
+else:
+	print("This won't be printed.")
+print("What about this?")
+
+# Will print this.
+# What about this one?		
+
+```
+Where as if we change the indentation in above snippet,
+
+```python
+indent = 4
+if indent == 4:
+	print("Will be printing this")
+else:
+	print("This won't be printed.")
+	print("What about this?")	
+	
+# Will be printing this	
+```
+The indentation of last `print` determines whether it belongs to the `else` clause or it should be independently invoked of the `if-else` conditions. Whereas the the commented(_one with '#' before statement_) are not checked for indentation and thus are negelected while running the code.
